--- a/app/views/leads/_web.html.haml
+++ b/app/views/leads/_web.html.haml
@@ -22,10 +22,10 @@
         %td
           .label #{t :facebook}:
           = f.text_field :facebook, class: "customInputsLeads"
-      %tr
-        %td
-          .label #{t :skype}:
-          = f.text_field :skype, class: "customInputsLeads"
-        %td= spacer
-        %td= spacer
+      -# %tr
+      -#   %td
+      -#     .label #{t :skype}:
+      -#     = f.text_field :skype, class: "customInputsLeads"
+      -#   %td= spacer
+      -#   %td= spacer
 
