--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -49,7 +49,7 @@ $sidebar_width: 210px;
     border-radius: 100%; }
   a:link, a:visited {
     color: $color_subtitle;
-    text-decoration: none; }
+    text-decoration: none;}
   a:hover {
     background: none; };
   &.show_attributes {
@@ -505,8 +505,7 @@ $bg_color9: #FFDD4A;
     list-style: none;
     padding: 6px 0px 6px 0px;
     .gravatar {
-      float: left;
-      padding: 0px 8px 0px 0px; }
+      float: left; }
     tt {
       color: dimgray;
     }
@@ -819,6 +818,22 @@ table.asset_attributes {
   justify-content: space-between;
 }
 
+.flexRow{
+  display:flow-root;
+  justify-content: space-between;
+}
+
+.circleAtivities{
+  height: 40px;
+  background-color: #ff6b45;
+  width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  margin-right: 10px;
+}
+
 .testBox{
   background-color: rgb(255, 255, 255);
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
@@ -968,8 +983,8 @@ font-size: 14px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   background-color: #ff6b45;
 }
@@ -1132,6 +1147,25 @@ font-size: 14px;
   height: 150px;
   margin-top: 20px;
   border-radius: 10px;
+  position: relative;
+  overflow: hidden;
+}
+
+.overlayCommingSoon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6); /* Semi-transparent background */
+  color: white; /* Text color */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5em;
+  border-radius: 10px;
+  opacity: 0.9; /* Initially hidden */
+  transition: opacity 0.3s ease; /* Smooth transition */
 }
 
 .boxesDashboardTtile{
@@ -1167,6 +1201,10 @@ font-size: 14px;
 .bold-number-miniBoxes{
   font-size: 30px;
   font-weight: bold;
+}
+
+.f-bold{
+  font-weight: bolder;
 }
 
 .scrollPop-up{
@@ -1234,6 +1272,40 @@ font-size: 14px;
   margin-top: 50px;
 }
 
+.mt-n5{
+  margin-top: 5px !important;
+}
+
+.pb-20{
+  padding-bottom: 20px;
+}
+
+.gap-custom{
+  gap: 10px;
+}
+
+.w-custom-laead-form{
+width: 240px;
+}
+
+.w-custom-laead-form-street-long{
+  width: 500px !important;
+}
+
+.w-custom-laead-form-street-city{
+  width: 210px !important;
+}
+
+.pb-1{
+  padding-bottom: 10px;
+}
+
+.flex-baseline{
+  gap: 10px;
+  display: flex;
+  align-items: baseline;
+}
+
 @media(max-width: 991px){
   .testTOCheck {
     display: flex;
@@ -1252,7 +1324,7 @@ font-size: 14px;
   .testBox {
     background-color: white;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-    width: 95%;
+    width: 91%;
     height: auto;
     border-radius: 10px;
     padding: 22px;
