--- a/app/views/home/_activity.html.haml
+++ b/app/views/home/_activity.html.haml
@@ -14,23 +14,27 @@
 
 - if (user.present? && subject.present?) || !known_event
   %li[activity]
-    .tools
-      %small
-        = l(activity.created_at, format: :short)
-    %tt
-      - if known_event
-        - action = t('action_' + activity.event)
-        - type = t('subject_' + activity.item_type.downcase)
-        %div
-          = link_to avatar_for(activity.user, size: :thumb), user_path(activity.user)
-        = t("activity_text", user: h(user), action: h(action), type: h(type), subject: h(subject), default: "#{h user} #{h action} #{h type} #{h subject}").html_safe # locales optionally can change the word order for activities using 'activity_text'
-        - if ((item = activity.item).class == Comment) and Setting.comments_visible_on_dashboard
-          = t('action_create_comment', comment: truncate(h(item.comment), length: 90)).html_safe
-      - else
-        - type = t(activity.item_type.downcase)
-        - if item.respond_to? :email
-          = avatar_for(item, size: :thumb)
-        = type
-        = subject
-        = ":"
-        = auto_link(t(activity.event))
+    %div.flexRow
+      .tools.mt-1
+        %small
+          = l(activity.created_at, format: :short)
+      %div.flex.al-item
+        - if known_event
+          %div
+            - action = t('action_' + activity.event)
+            - type = t('subject_' + activity.item_type.downcase)
+          %div
+            %div.circleAtivities
+              = link_to avatar_for(activity.user, size: :thumb), user_path(activity.user)
+          %div
+            = t("activity_text", user: h(user), action: h(action), type: h(type), subject: h(subject), default: "#{h user} #{h action} #{h type} #{h subject}").html_safe # locales optionally can change the word order for activities using 'activity_text'
+            - if ((item = activity.item).class == Comment) and Setting.comments_visible_on_dashboard
+              = t('action_create_comment', comment: truncate(h(item.comment), length: 90)).html_safe
+        - else
+          - type = t(activity.item_type.downcase)
+          - if item.respond_to? :email
+            = avatar_for(item, size: :thumb)
+          = type
+          = subject
+          = ":"
+          = auto_link(t(activity.event))
