--- a/app/views/leads/_edit.html.haml
+++ b/app/views/leads/_edit.html.haml
@@ -7,9 +7,11 @@
 
     = render "leads/top_section",    f: f, edit: true
     = render "fields/edit_custom_field_group", f: f, edit: true
+    = render "leads/contact",        f: f, edit: true
+    = render "shared/add_comment",   f: f
+    = render "leads/reminder",       f: f
     = render "leads/status",         f: f, edit: true
     = render "leads/documents",      f: f, edit: true
-    = render "leads/contact",        f: f, edit: true
     = render "leads/web",            f: f, edit: true
     = render "fields/groups",        f: f, edit: true
     = render "entities/permissions", f: f, edit: true, entity: @lead
