--- a/app/views/leads/_status.html.haml
+++ b/app/views/leads/_status.html.haml
@@ -2,39 +2,40 @@
 - collapsed = session[:lead_status].nil? # && @lead.errors.empty?
 = subtitle :lead_status, collapsed, t(:status)
 
-.section
+.section.pb-20
   %small#lead_status_intro{ hidden_if(!collapsed) }
     = t(:intro, t(:lead_status_small)) unless edit
   #lead_status{ hidden_if(collapsed) }
-    %table
-      %tr
-        %td
+    %div
+      %div.flex.mt-1
+        %div
           .label.top #{t :dealer_type}:
-          = f.select :dealer_type, Lead.dealer_types.keys.map { |key| [key.to_s.humanize, key] }, { selected: @lead.dealer_type }, { style: "width:160px", class: 'select2 customInputsLeads' }
-        %td= spacer
-        %td
+          = f.select :dealer_type, Lead.dealer_types.keys.map { |key| [key.to_s.humanize, key] }, { selected: @lead.dealer_type }, { style: "width:240px", class: 'select2 customInputsLeads w-custom-laead-form' }
+        %div= spacer
+        %div
           .label.top #{t :status}:
-          = f.select :status, lead_status_codes_for(@lead), { selected: (@lead.status || "new").to_sym }, { style: "width:160px", class: 'select2 customInputsLeads' }
-        %td= spacer
-        %td
-          .label.top #{t :rating}:
-          = rating_select "lead[rating]", { id: :lead_rating, selected: @lead.rating, style: "width:160px" }
-      %tr
-        %td
+          = f.select :status, lead_status_codes_for(@lead), { selected: (@lead.status || "new").to_sym }, { style: "width:240px", class: 'select2 customInputsLeads w-custom-laead-form' }
+        %div= spacer
+        -# %td
+        -#   .label.top #{t :rating}:
+        -#   = rating_select "lead[rating]", { id: :lead_rating, selected: @lead.rating, style: "width:160px" }
+      %div.flex.mt-1.pb-1
+        %div
           .label #{t :source}:
           - if @campaign && !edit # Create a lead from Campaign landing page: select :campaign as a source and disable the dropdown.
-            = f.select :source, Setting.unroll(:lead_source), { selected: :campaign }, { style: "width:160px;", disabled: true, class: 'select2 customInputsLeads' }
+            = f.select :source, Setting.unroll(:lead_source), { selected: :campaign }, { style: "width:240px;", disabled: true, class: 'select2 customInputsLeads w-custom-laead-form' }
             = hidden_field_tag "lead[source]", "campaign"
           - else
-            = f.select :source, Setting.unroll(:lead_source), { selected: (@lead.source || "other").to_sym }, { style: "width:160px", class: 'select2 customInputsLeads' }
-        %td= spacer
-        %td
-          .label #{t :campaign}:
+            = f.select :source, Setting.unroll(:lead_source), { selected: (@lead.source || "other").to_sym }, { style: "width:240px", class: 'select2 customInputsLeads w-custom-laead-form' }
+        %div= spacer
+        %div
+          .label.mt-n5 #{t :campaign}:
           - if @campaign && !edit # Create a lead from Campaign landing page: select current campaign and disable the dropdown.
-            = collection_select :lead, :campaign_id, @campaigns, :id, :name, { selected: @campaign.id }, { style: "width:100%", disabled: true, class: 'select2 customInputsLeads' }
+            = collection_select :lead, :campaign_id, @campaigns, :id, :name, { selected: @campaign.id }, { style: "width:240px", disabled: true, class: 'select2 customInputsLeads' }
           - else
-            = collection_select :lead, :campaign_id, @campaigns, :id, :name, { selected: @lead.campaign_id, include_blank: t(:select_none) }, { style: "width:100%", onchange: "crm.flip_campaign_permissions(this.value)", class: 'select2 customInputsLeads' }
-        %td= spacer
-        %td
+            = collection_select :lead, :campaign_id, @campaigns, :id, :name, { selected: @lead.campaign_id, include_blank: t(:select_none) }, { style: "width:240px", onchange: "crm.flip_campaign_permissions(this.value)", class: 'select2 customInputsLeads' }
+        %div= spacer
+      %div.mt-1
+        %div.mt-1
           .label.top #{t :assigned_to}:
           = user_select(:lead, all_users, current_user)
