--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -1342,6 +1342,21 @@ width: 240px;
   padding-bottom: 30px;
 }
 
+.text-center{
+  text-align: center;
+}
+
+.p-50{
+  padding: 50px;
+}
+
+.profileBox{
+  background-color: white;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  width: 90%;
+  border-radius: 10px;
+}
+
 @media(max-width: 991px){
   .testTOCheck {
     display: flex;
