--- a/app/views/shared/_add_comment.html.haml
+++ b/app/views/shared/_add_comment.html.haml
@@ -5,4 +5,8 @@
   %small#comment_intro{ hidden_if(!collapsed) }
     = t(:comment_intro)
   #campaign_comment{ hidden_if(collapsed) }
-    = text_area_tag :comment_body, @comment_body, class: "customTextAreaLeads"
+    %div
+      %label 
+        Add Notes
+    %div
+      = text_area_tag :comment_body, @comment_body, class: "customTextAreaLeads"
